tests/const_local_assign_bad.stderr
tests/const_local_assign_bad.sl:4:2: error: SL2004: type mismatch: assignment target is const
