tests/const_local_assign_bad.sl
fn f() {
	const x i32 = 1
	x = 2
}

fn main() {}
